--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfoliosenaste",
-  "homepage": "https://<ditt-github-användarnamn>.github.io/<repo-namn>",
+  "homepage": "https://lisawiklund.github.io/Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
