Ta bort gamla builds

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfoliosenaste",
+  "homepage": "https://lisawiklund.github.io/portfolio-1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
